--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 		<h1>Заголовок первого уровня (самый большой шрифт)</h1> 
 		<ol>
-			<li>Борисова Алёна</li>
+			<li> Алёна</li>
 			<li>Дмитриева Елизавета</li>
 		</ol>
 		<ul>
